# vifi-prompt

./: Cargo.toml  README.md
src/: cli.rs  context.rs  init.fish  main.rs  traits.rs
